Add html for navigation

--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golden</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
-
+    <nav class="navigation">
+        <div class="navigation__logo-box">
+            <div class="logo"><a class="logo__text">Golden</a></div>
+        </div>
+        <div class="navigation__list-box">
+            <ul class="navigation__list-item">
+                <li class="navigation__item"><a href="" class="navigation__link">Home</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Services</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Portfolio</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">About</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 
 </html>
