--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
             </ul>
         </div>
     </nav>
+    <header class="header">
+        <div class="header__container">
+            <div class="header__box">
+                <div class="header__text-box">
+                    <h1 class="heading-primary">
+                        <span class="heading-primary--title">Welcom to our studio</span>
+                        <span class="heading-primary--subtitle">It's nice to meed you</span>
+                    </h1>
+                </div>
+                <div class="header__btn-box">
+                    <a href="" class="btn btn--primary">Tell me more</a>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
