add variables to _varaibles.scss, add styles for navigation, imports file to main.scss

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
     <nav class="navigation">
         <div class="navigation__logo-box">
-            <div class="logo"><a class="logo__text">Golden</a></div>
+            <div class="navigation__logo">
+                <a class="navigation__logo-text">Golden</a>
+            </div>
         </div>
         <div class="navigation__list-box">
             <ul class="navigation__list-item">
