add styles for header and button, create _utilities.scss, add new variables

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navigation">
+    <nav class="navigation navigation--scrolled">
         <div class="navigation__logo-box">
             <div class="navigation__logo">
                 <a class="navigation__logo-text">Golden</a>
@@ -32,7 +32,7 @@
     </nav>
     <header class="header">
         <div class="header__container">
-            <div class="header__box">
+            <div class="header__row">
                 <div class="header__text-box">
                     <h1 class="heading-primary">
                         <span class="heading-primary--title">Welcom to our studio</span>
@@ -40,11 +40,13 @@
                     </h1>
                 </div>
                 <div class="header__btn-box">
-                    <a href="" class="btn btn--primary">Tell me more</a>
+                    <a href="#" class="btn btn--primary u-margin-center-in-flex">Tell me more</a>
                 </div>
             </div>
         </div>
     </header>
+    <main>
+    </main>
 </body>
 
 </html>
