--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
@@ -22,7 +23,7 @@
         </div>
         <div class="navigation__list-box">
             <ul class="navigation__list-item">
-                <li class="navigation__item"><a href="" class="navigation__link">Home</a></li>
+                <li class="navigation__item"><a href="#header" class="navigation__link">Home</a></li>
                 <li class="navigation__item"><a href="" class="navigation__link">Services</a></li>
                 <li class="navigation__item"><a href="" class="navigation__link">Portfolio</a></li>
                 <li class="navigation__item"><a href="" class="navigation__link">About</a></li>
@@ -30,7 +31,7 @@
             </ul>
         </div>
     </nav>
-    <header class="header">
+    <header class="header" id="header">
         <div class="header__container">
             <div class="header__row">
                 <div class="header__text-box">
@@ -46,6 +47,44 @@
         </div>
     </header>
     <main>
+        <section class="section-services">
+            <div class="section-services__container">
+                <div class="section-services__row">
+                    <div class="section-services__text-box">
+                        <h2 class="heading-secondary">
+                            <span class="heading-secondary--title">Services</span>
+                            <span class="heading-secondary--subtitle">Lorem ipsum dolor sit amet.</span>
+                        </h2>
+                    </div>
+                    <div class="section-services__card-box">
+                        <div class="card card--service">
+                            <div class="card__icon_box">
+                                <i class="card-icon"></i>
+                            </div>
+                            <h3 class="heading-tertiary">E-Commerce</h3>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="card card--service">
+                            <div class="card__icon_box">
+                                <i class="card-icon"></i>
+                            </div>
+                            <h3 class="heading-tertiary">Responsive Web</h3>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="card card--service">
+                            <div class="card__icon_box">
+                                <i class="card-icon"></i>
+                            </div>
+                            <h3 class="heading-tertiary">Web Security</h3>
+                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
