add styles for card, update index.html and add new styles to _utilities.scss

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="header__text-box">
                     <h1 class="heading-primary">
                         <span class="heading-primary--title">Welcom to our studio</span>
-                        <span class="heading-primary--subtitle">It's nice to meed you</span>
+                        <span class="heading-primary--subtitle">It's nice to meet you</span>
                     </h1>
                 </div>
                 <div class="header__btn-box">
@@ -47,39 +47,45 @@
         </div>
     </header>
     <main>
-        <section class="section-services">
-            <div class="section-services__container">
+        <section class="section-services u-padding-vertical-big">
+            <div class="section-services__container u-margin-center-in-flex">
                 <div class="section-services__row">
-                    <div class="section-services__text-box">
+                    <div class="section-services__text-box u-padding-bottom-big">
                         <h2 class="heading-secondary">
                             <span class="heading-secondary--title">Services</span>
                             <span class="heading-secondary--subtitle">Lorem ipsum dolor sit amet.</span>
                         </h2>
                     </div>
-                    <div class="section-services__card-box">
+                    <div class="section-services__cards-box">
                         <div class="card card--service">
-                            <div class="card__icon_box">
-                                <i class="card-icon"></i>
+                            <div class="card__icon-box u-margin-bottom-small">
+                                <i class="card__icon fas fa-shopping-basket"></i>
                             </div>
-                            <h3 class="heading-tertiary">E-Commerce</h3>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <div class="card__text-box">
+                                <h3 class="heading-tertiary u-padding-bottom-small">E-Commerce</h3>
+                                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
                         </div>
                         <div class="card card--service">
-                            <div class="card__icon_box">
-                                <i class="card-icon"></i>
+                            <div class="card__icon-box u-margin-bottom-small">
+                                <i class="card__icon fas fa-laptop-code"></i>
                             </div>
-                            <h3 class="heading-tertiary">Responsive Web</h3>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <div class="card__text-box">
+                                <h3 class="heading-tertiary u-padding-bottom-small">Responsive Web</h3>
+                                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
                         </div>
                         <div class="card card--service">
-                            <div class="card__icon_box">
-                                <i class="card-icon"></i>
+                            <div class="card__icon-box u-margin-bottom-small">
+                                <i class="card__icon fas fa-lock"></i>
                             </div>
-                            <h3 class="heading-tertiary">Web Security</h3>
-                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <div class="card__text-box">
+                                <h3 class="heading-tertiary u-padding-bottom-small">Web Security</h3>
+                                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
