Update html for section portfolio and update styles for card

--- a/index.html
+++ b/index.html
@@ -91,66 +91,66 @@
                 </div>
             </div>
         </section>
-        <section class="section-portfolio">
-            <div class="section-portfolio__container">
+        <section class="section-portfolio u-padding-vertical-big">
+            <div class="section-portfolio__container u-margin-center-in-flex">
                 <div class="section-portfolio__row">
-                    <div class="section-portfolio__text-box">
+                    <div class="section-portfolio__text-box u-padding-bottom-big">
                         <h2 class="heading-secondary">
                             <span class="heading-secondary--title">Our Portfolio</span>
                             <span class="heading-secondary--subtitle">Lorem ipsum dolor sit amet.</span>
                         </h2>
                     </div>
                     <div class="section-portfolio__cards-box">
-                        <div class="card card--portfolio">
+                        <div class="card card--portfolio u-margin-bottom-medium">
                             <div class="card__img-box">
-                                <img src="images/portfolio-1.png" alt="project">
+                                <img class="card__img" src="images/portfolio-1.png" alt="project">
                             </div>
-                            <div class="card__text-box">
+                            <div class="card__text-box u-padding-vertical-small">
                                 <h3 class="heading-tertiary u-padding-bottom-small">Ebony & Ivory</h3>
                                 <p class="description">Branding</p>
                             </div>
                         </div>
-                        <div class="card card--portfolio">
+                        <div class="card card--portfolio u-margin-bottom-medium">
                             <div class="card__img-box">
-                                <img src="images/portfolio-2.png" alt="project">
+                                <img class="card__img" src="images/portfolio-2.png" alt="project">
                             </div>
-                            <div class="card__text-box">
+                            <div class="card__text-box u-padding-vertical-small">
                                 <h3 class="heading-tertiary u-padding-bottom-small">Ebony & Ivory</h3>
                                 <p class="description">Branding</p>
                             </div>
                         </div>
-                        <div class="card card--portfolio">
+                        <div class="card card--portfolio u-margin-bottom-medium">
                             <div class="card__img-box">
-                                <img src="images/portfolio-3.png" alt="project">
+                                <img class="card__img" src="images/portfolio-3.png" alt="project">
                             </div>
-                            <div class="card__text-box">
+                            <div class="card__text-box u-padding-vertical-small">
                                 <h3 class="heading-tertiary u-padding-bottom-small">Ebony & Ivory</h3>
                                 <p class="description">Branding</p>
                             </div>
                         </div>
-                        <div class="card card--portfolio">
+                        <div class="card card--portfolio u-margin-bottom-medium">
                             <div class="card__img-box">
-                                <img src="images/portfolio-4.png" alt="project">
+                                <img class="card__img" src="images/portfolio-4.png" alt="project">
                             </div>
-                            <div class="card__text-box">
+                            <div class="card__text-box u-padding-vertical-small">
                                 <h3 class="heading-tertiary u-padding-bottom-small">Ebony & Ivory</h3>
                                 <p class="description">Branding</p>
                             </div>
                         </div>
-                        <div class="card card--portfolio">
+                        <div class="card card--portfolio u-margin-bottom-medium">
                             <div class="card__img-box">
-                                <img src="images/portfolio-5.png" alt="project">
+                                <img class="card__img" src="images/portfolio-5.png" alt="project">
                             </div>
-                            <div class="card__text-box">
+                            <div class="card__text-box u-padding-vertical-small">
                                 <h3 class="heading-tertiary u-padding-bottom-small">Ebony & Ivory</h3>
                                 <p class="description">Branding</p>
                             </div>
                         </div>
-                        <div class="card card--portfolio">
+                        <div class="card card--portfolio u-margin-bottom-medium">
                             <div class="card__img-box">
-                                <img src="images/portfolio-6.png" alt="project">
+                                <img class="card__img" src="images/portfolio-6.png" alt="project">
                             </div>
-                            <div class="card__text-box">
+                            <div class="card__text-box u-padding-vertical-small">
                                 <h3 class="heading-tertiary u-padding-bottom-small">Ebony & Ivory</h3>
                                 <p class="description">Branding</p>
                             </div>
