--- a/index.html
+++ b/index.html
@@ -160,6 +160,19 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__copyright-box">
+                <p class="footer__copyright">&copy; Copyright 2014 FreebiesXpress.com</p>
+            </div>
+            <div class="footer__icons-box">
+                <div class="footer__icon-box"><i class="footer__icon fab fa-twitter"></i></div>
+                <div class="footer__icon-box"><i class="footer__icon fab fa-facebook"></i></div>
+                <div class="footer__icon-box"><i class="footer__icon fab fa-product-hunt"></i></div>
+                <div class="footer__icon-box"><i class="footer__icon fab fa-google-plus"></i></div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
