--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navigation navigation--scrolled">
+    <nav class="navigation">
         <div class="navigation__logo-box">
             <div class="navigation__logo">
                 <a class="navigation__logo-text">Golden</a>
@@ -160,19 +160,23 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="footer__container">
-            <div class="footer__copyright-box">
-                <p class="footer__copyright">&copy; Copyright 2014 FreebiesXpress.com</p>
-            </div>
-            <div class="footer__icons-box">
-                <div class="footer__icon-box"><i class="footer__icon fab fa-twitter"></i></div>
-                <div class="footer__icon-box"><i class="footer__icon fab fa-facebook"></i></div>
-                <div class="footer__icon-box"><i class="footer__icon fab fa-product-hunt"></i></div>
-                <div class="footer__icon-box"><i class="footer__icon fab fa-google-plus"></i></div>
+    <footer class="footer u-padding-vertical-medium">
+        <div class="footer__container u-margin-center-in-flex">
+            <div class="footer__row">
+                <div class="footer__copyright-box">
+                    <p class="footer__copyright u-margin-center-in-flex">&copy; Copyright 2014 FreebiesXpress.com</p>
+                </div>
+                <div class="footer__icons-box">
+                    <div class="footer__icon-box"><i class="footer__icon fab fa-twitter"></i></div>
+                    <div class="footer__icon-box"><i class="footer__icon fab fa-facebook"></i></div>
+                    <div class="footer__icon-box"><i class="footer__icon fab fa-product-hunt"></i></div>
+                    <div class="footer__icon-box"><i class="footer__icon fab fa-google-plus"></i></div>
+                </div>
             </div>
         </div>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
