Add menu hamburger for medium screen, add mixin breakpoint, update scss files

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
                 <a class="navigation__logo-text">Golden</a>
             </div>
         </div>
+        <div class="navigation__menu-box">
+            <div class="navigation__menu">
+                <div class="navigation__icon"></div>
+            </div>
+        </div>
         <div class="navigation__list-box">
             <ul class="navigation__list-item">
                 <li class="navigation__item"><a href="#header" class="navigation__link">Home</a></li>
-                <li class="navigation__item"><a href="" class="navigation__link">Services</a></li>
-                <li class="navigation__item"><a href="" class="navigation__link">Portfolio</a></li>
+                <li class="navigation__item"><a href="#services" class="navigation__link">Services</a></li>
+                <li class="navigation__item"><a href="#portfolio" class="navigation__link">Portfolio</a></li>
                 <li class="navigation__item"><a href="" class="navigation__link">About</a></li>
                 <li class="navigation__item"><a href="" class="navigation__link">Contact</a></li>
             </ul>
@@ -47,7 +52,7 @@
         </div>
     </header>
     <main>
-        <section class="section-services u-padding-vertical-big">
+        <section class="section-services u-padding-vertical-big" id="services">
             <div class="section-services__container u-margin-center-in-flex">
                 <div class="section-services__row">
                     <div class="section-services__text-box u-padding-bottom-big">
@@ -91,7 +96,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-portfolio u-padding-vertical-big">
+        <section class="section-portfolio u-padding-vertical-big" id="portfolio">
             <div class="section-portfolio__container u-margin-center-in-flex">
                 <div class="section-portfolio__row">
                     <div class="section-portfolio__text-box u-padding-bottom-big">
